# everscan-verify

./: Cargo.toml  README.md
.github/workflows/: main.yml
js/: binary.js  package-lock.json  package.json
shared-models/: Cargo.toml
shared-models/src/: compiler_error.rs  lib.rs  place_error.rs  versions.rs
src/: import.pest  lib.rs  main.rs  utils.rs
test/: dao_root.sol
