[package]
edition = "2021"
name = "everscan-verify"
version = "1.6.13"

[dependencies]

anyhow = { version = "1.0.57", features = ["backtrace"] }
base64 = "0.13.0"
clap = { version = "4.0.18", features = ["derive"] }
comfy-table = "6.0.0"
crossterm = "0.25.0"
dialoguer = { version = "0.10.1" }
hex = "0.4.3"
hmac-sha256 = "1.1.4"
pathdiff = "0.2.1"
pest = "2.1"
pest_derive = "2.1"
semver = "1.0.10"
serde_json = "1.0.79"
spinners = { version = "4.1.0" }
reqwest = { version = "0.11.13", default-features = false, features = ["blocking", "json", "native-tls", "gzip"] }
walkdir = "2.3.2"
colour = "0.6.0"
openssl = { version = "0.10.44", features = ["vendored"] }
os_str_bytes = "6.4.1"
path-slash = "0.2.1"
spdx = "0.10.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.136"

[dependencies.shared-models]
path = "shared-models"

[workspace]
members = ["shared-models"]
