[package]
edition = "2021"
name = "everscan-verify"
version = "1.6.15"

[dependencies]

anyhow = { version = "1.0.70", features = ["backtrace"] }
base64 = "0.21.0"
clap = { version = "4.2.1", features = ["derive"] }
comfy-table = "6.1.4"
crossterm = "0.26.1"
dialoguer = { version = "0.10.4" }
hex = "0.4.3"
hmac-sha256 = "1.1.6"
pathdiff = "0.2.1"
pest = "2.5"
pest_derive = "2.5"
semver = "1.0.17"
serde_json = "1.0.95"
spinners = { version = "4.1.0" }
reqwest = { version = "0.11.16", default-features = false, features = ["blocking", "json", "native-tls", "gzip"] }
walkdir = "2.3.3"
colour = "0.7.0"
openssl = { version = "0.10.50", features = ["vendored"] }
os_str_bytes = "6.5.0"
path-slash = "0.2.1"
spdx = "0.10.1"
ariadne = "0.2.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.160"

[dependencies.shared-models]
path = "shared-models"

[workspace]
members = ["shared-models"]
