[package]
edition = "2021"
name = "everscan-verify"
version = "1.6.16"

[dependencies]

anyhow = { version = "1.0.71", features = ["backtrace"] }
base64 = "0.21.2"
clap = { version = "4.3.5", features = ["derive"] }
comfy-table = "7.0.1"
crossterm = "0.26.1"
dialoguer = { version = "0.10.4" }
hex = "0.4.3"
hmac-sha256 = "1.1.7"
pathdiff = "0.2.1"
pest = "2.7"
pest_derive = "2.7"
semver = "1.0.17"
serde_json = "1.0.97"
spinners = { version = "4.1.0" }
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "json", "native-tls", "gzip"] }
walkdir = "2.3.3"
colour = "0.7.0"
openssl = { version = "0.10.55", features = ["vendored"] }
os_str_bytes = "6.5.1"
path-slash = "0.2.1"
spdx = "0.10.1"
ariadne = "0.3.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.164"

[dependencies.shared-models]
path = "shared-models"

[workspace]
members = ["shared-models"]

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1