[package]
name = "shared-models"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
axum = { version = "0.5.10", features = ["http2"] }
serde = { version = "1.0", features = ["derive", "rc"] }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
base64 = "0.13.0"
serde_json = { version = "1.0.79", features = ["preserve_order"] }
thiserror = "1.0.30"
