[package]
name = "shared-models"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.0"
http = "0.2.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0.95", features = ["preserve_order"] }
thiserror = "1.0.40"
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
